# rust-auth-project-copy

./: README.md
.devcontainer/: devcontainer.json
zkp_auth/: Cargo.toml  Tobi_wallet.json  build.rs  did_zkp_72a4b729557743566fc57cc4d3a7edd8_wallet.json  did_zkp_fbbda121d52182ebc874b8681e5996ad_wallet.json  tomi_wallet.json
zkp_auth/proto/: zkp_authentication_protobuff.proto
zkp_auth/src/: client.rs  lib.rs  server.rs  wallet.rs  zkp_auth.rs  zkp_proto.rs
zkp_auth/src/ssi/: credential.rs  issuer.rs  mod.rs  wallet.rs
