[package]
name = "zkp_auth"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.9"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"]}
hex = "0.4.3"
tokio = { version = "1.0", features = ["macros","rt-multi-thread"]} #allows us of asynchronus rust
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[[bin]]
name = "server"
path = 'src/server.rs'

[[bin]]
name = "client"
path = 'src/client.rs'